feat: add all jsdocs for the routes and script to auto generate api docs
